--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "start": "run-s build server",
     "dev": "run-p dev:build dev:server",
     "dev:build": "webpack --watch",
-    "dev:server": "nodemon server"
+    "dev:server": "nodemon server",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage",
+    "lint": "npx eslint . --ext .js,.jsx",
+    "lint:fix": "npx eslint . --ext .js,.jsx --fix"
   },
   "babel": {
     "plugins": [
@@ -33,10 +38,18 @@
       "@babel/plugin-proposal-object-rest-spread"
     ],
     "presets": [
-      "@babel/preset-env",
+      [
+        "@babel/preset-env",
+        {
+          "targets":{
+            "node": "current"
+          }
+        }
+      ],
       "@babel/preset-react"
     ]
   },
+  "jest": {},
   "dependencies": {
     "@babel/core": "^7.10.2",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
@@ -63,5 +76,15 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.9.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
