--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
       [
         "@babel/preset-env",
         {
-          "targets":{
+          "targets": {
             "node": "current"
           }
         }
@@ -78,6 +78,10 @@
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.24.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/user-event": "^12.1.5",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.9.0",
     "eslint-config-standard": "^14.1.1",
@@ -85,6 +89,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "nock": "^13.0.4"
   }
 }
